--- a/templates/base.html
+++ b/templates/base.html
@@ -81,3 +81,4 @@
   <script src="{% block scripts_path %}{% endblock %}static/app.js"></script>
   {% block scripts_after %}{% endblock %}
 </body>
+</html>
